# prompt_hook

./: .gitignore  README.md  pyproject.toml
.github/workflows/: build-loginstaller-wheel.yml
prompt_hook/: __init__.py  __main__.py  hook.py  install.py
