[project]
name = "prompt-hook"
version = "0.1.4"
description = "Log AI prompt hooks for Cursor beforeSubmitPrompt and afterAgentResponse"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
prompt-hook = "prompt_hook.__main__:main"

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["prompt_hook*"]

[tool.uv]
package = true
